crates/elif-core-derive/tests/ui/fail/injectable_on_enum.rs
use elif_core_derive::injectable;

#[injectable]
pub enum UserService {
    Active,
    Inactive,
}

fn main() {}